# barong

./: .gitignore  README.md  home.py  pyproject.toml  requirements.txt
pages/: 1_encrypt.py  2_decrypt.py  salt
